<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.7"
        android:text="@string/overall_score"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/Score"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textScore">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/overall_score"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_alignEnd="@+id/textView3"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/average"
                android:textColor="#FFC107"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:indeterminateOnly="false"
                android:progressDrawable="@drawable/progressbar" />

            <TextView
                android:id="@+id/progrestest1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/_53"
                android:textColor="#EEC213"
                android:textSize="28sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/progrestest2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progrestest1"
                android:layout_alignStart="@+id/progrestest1"
                android:layout_alignEnd="@+id/progrestest1"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:text="@string/_100"
                android:textColor="@color/black" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:background="#F2F0F0">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="0dp"
                android:text="@string/search_volume"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:text="@string/competiton"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />


            <TextView
                android:id="@+id/hignGreen"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/high"
                android:textColor="@color/green"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/highRed"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/high"
                android:textColor="@color/red"
                android:textSize="16sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.7"
        android:text="@string/Title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Score" />

    <androidx.cardview.widget.CardView
        android:id="@+id/alertTitle"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/title_generated"
                    android:textSize="16sp"

                    />
            </ScrollView>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <Button
                    android:id="@+id/copydescription"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="#F8F4F4"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/copy"
                    android:textColor="#03A9F4"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/shareDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F8F4F4"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/share"
                    android:textColor="#03A9F4"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.7"
        android:text="@string/Description"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data"
                    android:textSize="16sp"

                    />
            </ScrollView>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:orientation="horizontal"
                android:padding="16dp">

                <Button
                    android:id="@+id/button_copy"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="#F8F4F4"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/copy"
                    android:textColor="#03A9F4"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F8F4F4"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/share"
                    android:textColor="#03A9F4"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>